fix : Fix mobile horizontal scroll phenomenon

--- a/assets/scss/layout/_sectionDesc2.scss
+++ b/assets/scss/layout/_sectionDesc2.scss
@@ -110,6 +110,7 @@
       background: url(../images/sc-desc2.jpg) center / cover no-repeat;
       &--text {
         .text {
+          white-space: noWrap;
           font-size: 30px;
         }
       }
